# wrench-loader

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  deny.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  contracts.yml  security.yml
docs/adr/: 0001-canonical-contracts.md  0001-scope-and-upstream-policy.md  0002-rename-to-gear-loader-and-layer-move.md
fixtures/: hostile.html  minimal.atom  minimal.docx  minimal.jsonfeed.json  minimal.md  minimal.rs  minimal.rss
src/: lib.rs  main.rs
tests/: cli_extract.rs
