[package]
name = "gear-loader"
version = "0.0.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/constantin-jais/gear-loader"
description = "Sovereign rich-document ingestion worker/service backed by Xberg."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
